# tauri-plugin-openurl

./: Cargo.toml  LICENSE  README.md  build.rs  bun.lockb  package.json
.changes/: config.json  initial-release.md  readme.md
android/: .gitignore  build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  OpenUrlPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: .gitignore  package.json
examples/tauri-app/src/: App.jsx  App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: main-capability.json
examples/tauri-app/src-tauri/src/: lib.rs
ios/: Package.swift  README.md
ios/Sources/: OpenUrlPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: openurl.toml
permissions/schemas/: schema.json
src/: desktop.rs  lib.rs  mobile.rs  models.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
