[package]
name = "tauri-plugin-openurl"
version = "0.0.0"
authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-openurl"

[dependencies]
tauri = { version = "2.0.0-beta.13" }
serde = "1.0.197"
thiserror = "1.0.58"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.11", features = ["build"] }
