[package]
name = "tauri-plugin-openurl"
version = "0.1.0-beta.3"
authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
description = "open url in default browser (just like target blank) in Tauri"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-openurl"
license = "MIT"

[dependencies]
tauri = { version = "2.0.0-rc" }
serde = "1.0.204"
thiserror = "1.0.63"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }