[package]
name = "tauri-plugin-openurl"
version = "0.1.0"
authors = ["Priyadarshan Giri <me@giripriyadarshan.com>"]
description = "open url in default browser (just like target blank) in Tauri"
edition = "2021"
rust-version = "1.80.0"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-openurl"
license = "MIT"

[dependencies]
tauri = { version = "2.0.2" }
serde = "1.0.210"
thiserror = "1.0.64"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }